# Portfolio-DevOps-Website

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
amazon/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  utils.py  variables.py  views.py
amazon/migrations/: 0001_initial.py
django_portfolio/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: generator.py
